--- a/jqm/index.html
+++ b/jqm/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet"  href="./css/themes/default/vote.css">
 	<script src="./js/jquery.js"></script>
 	<script src="./js/jquery.mobile-1.3.1.min.js"></script>
+	<script src="./js/vote.js"></script>
 </head>
 <body>
 <div data-role="page" class="">
