--- a/jqm/index.html
+++ b/jqm/index.html
@@ -113,7 +113,7 @@
 			<div class="comment">
 				<form id="commentForm" method="POST" action="">
 					<label for="comment">输入文本...</label>
-					<textarea class="focus" id="comment" maxlength="150" name="comment"></textarea>
+					<textarea class="eCommentTextArea" id="comment" maxlength="150" name="comment"></textarea>
 					<a class="btn eCommentBtn" href="javascript:void(0);">确定</a>
 					<a class="btn eCancelBtn" href="javascript:void(0);">取消</a>
 				</form>
